--- a/templates/header.html
+++ b/templates/header.html
@@ -86,12 +86,10 @@
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0">
                                     <a href="{% url "blog"%}" class="dropdown-item">Blog </a>
-                                    <a href="{% url "team"%}" class="dropdown-item">Products</a>
-                                
-                                    
+                                    <a href="{% url 'team' %}" class="dropdown-item">Products</a>
                                 </div>
                             </div>
-                            <a href="{% url "contact"%}" class="nav-item nav-link">Contact</a>
+                            <a href="{% url 'contact' %}"  class="nav-item nav-link">Contact</a>
                             <a href="{% url "healthcare_centre" %}" class="nav-item nav-link">Login</a>
                         </div>
                     </div>
