--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,7 +27,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-dark rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
                         <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg); color: #09143C;"></i>
                     </div>
-                    <h6 class="mb-0">dixitfoundations@gmail.com</h6>
+                    <h6 class="mb-0">dixitfoundation@gmail.com</h6>
                 </div>
             </div>
         </div>
